# beanbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
beanbot/: __init__.py  app.py  config.py  ledger.py  parsers.py  quickadd.py  quickadd.yaml
config/: quickadd.example.yaml
tests/: test_app.py  test_ledger.py  test_quickadd.py
